2014-11-14  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Process.pm: '<defunct>' process are dead, process can be
	  "starman".
	* perl/Amanda/Rest/Runs.pm: Call process_alive with the $pname.

2014-11-13  Jean-Louis Martineau <martineau@zmanda.com>
	* amar-src/amar.c (amar_attr_add_data_fd): write eoa on size==0.

2014-11-12  Jean-Louis Martineau <martineau@zmanda.com>
	* autogen: Add "-I /usr/share/aclocal" to includes

2014-11-12  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Amdump.pm (run): set $self->{'pid'}
	* perl/Amanda/Amflush.pm (run): set $self->{'pid'}
	* perl/Amanda/CheckDump.pm (run): set $self->{'pid'}
	* perl/Amanda/Rest/Runs.pm: Log "fork" line.
	* perl/Amanda/Vault.pm: Small fix.
	* server-src/amflush.pl: Log "fork" line.
	* server-src/amvault.pl: s/config_name/config/g

2014-11-12  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Status.pm: Fix perl warning.

2014-11-08  Jean-Louis Martineau <martineau@zmanda.com>
	* xfer-src/filter-process.c (get_err_fd): Remove prototype.
	* xfer-src/xfer-element.h (get_err_fd): Add prototype.
	* perl/Amanda/Cmdline.swg: #include "match.h"

2014-11-08  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/robot.pm: Fix BROKEN-DRIVE-LOADED-SLOT.

2014-11-08  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Script_App.pm (print_to_server): Print enssage to debug
	  file.
	* server-src/amfetchdump.pl: Add severity to messages.

2014-11-07  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/robot.pm: Fix BROKEN-DRIVE-LOADED-SLOT.
	* installcheck/Amanda_Changer_robot.pl: Fix test.

2014-11-07  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/robot.pm: Add a BROKEN-DRIVE-LOADED-SLOT
	  property.
	* man/xml-source/amanda-changers.7.xml: Document it.

2014-11-06  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/amrmtape.pl: Fix diskpath.

2014-11-06  Jean-Louis Martineau <martineau@zmanda.com>